--- a/.github/workflows/readme-starts.yml
+++ b/.github/workflows/readme-starts.yml
@@ -1,8 +1,9 @@
 name: Update README ⭐
 on:
-  schedule:
-    - cron: "51 */4 * * *"  # Every 4 hours
-  workflow_dispatch:
+  #schedule:
+  #  - cron: "51 */4 * * *"  # Every 4 hours
+  #workflow_dispatch:
+  push
 
 jobs:
   update-readme:
